--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Fluent-Python Notes
+description: My notes from the best book for intermediate python.
 github_username: jjmachan
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fluent-python"
@@ -39,11 +39,11 @@ baseurl: "/fluent-python" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: jjmachan
+    github: jjmachan
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: false
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -55,10 +55,10 @@ show_image: false
 annotations: false
 
 # Set this to true to display tags on each post
-show_tags: true
+show_tags: false
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: UA-176495138-1
 
 exclude:
   - docker-compose.yml
@@ -72,7 +72,7 @@ include:
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
   github: true
-  binder: true
+  binder: false
   colab: true
 
 # Escape HTML in post descriptions
@@ -118,7 +118,7 @@ kramdown:
 
 # to limit size of xml as it can grow quite large.
 feed:
-  posts_limit: 5 #default posts_limit: 10
+  posts_limit: 15 #default posts_limit: 10
   excerpt_only: true
   
 exclude:
